# VISR-trial

./: CMakeLists.txt
cmake_modules/: GeneratePythonBinaryWheel.cmake  adjust_test_environment.cmake
cmake_modules/python/: get_binary_python_wheel_name.py
src/libaudiointerfaces/: CMakeLists.txt
src/libefl/: CMakeLists.txt
src/libobjectmodel/: CMakeLists.txt
src/libpanning/: CMakeLists.txt
src/libpanningdsp/: CMakeLists.txt
src/libpml/: CMakeLists.txt
src/libpythoncomponents/test/: pml_initialisation.cpp
src/libpythoncomponents/test/python/initpml/: pml_adder.py
src/librbbl/: CMakeLists.txt
src/librcl/: CMakeLists.txt  udp_receiver.cpp
src/libreverbobject/: CMakeLists.txt
src/librrl/: CMakeLists.txt
src/libsignalflows/: CMakeLists.txt  baseline_renderer.cpp
src/libvisr/: CMakeLists.txt
src/python/: CMakeLists.txt
src/python/audiointerfaces/: CMakeLists.txt  audiointerfaces.cpp
src/python/efl/: CMakeLists.txt
src/python/efl/test/: test_iir_biquads_single_channel.py  test_vector_add.py  test_vector_conversions.py  test_vector_copy_strided.py  test_vector_multiply.py  test_vector_multiply_add.py  test_vector_ramp_scaling.py  test_vector_subtract.py  uniform_sequence.py
src/python/objectmodel/: CMakeLists.txt
src/python/package/: CMakeLists.txt  MANIFEST.in.in  __init__.py.in  __init__.py.subpackage.template.in  pyproject.toml.in  setup.cfg.in  setup.py  setup.py.in
src/python/package/src/: __init__.py
src/python/package/src/audiointerfaces/: __init__.py
src/python/package/src/efl/: __init__.py
src/python/package/src/impl/: __init__.py  dll_path_context.py
src/python/package/src/objectmodel/: __init__.py
src/python/package/src/panning/: __init__.py
src/python/package/src/panningdsp/: __init__.py
src/python/package/src/pml/: __init__.py
src/python/package/src/rbbl/: __init__.py
src/python/package/src/rcl/: __init__.py
src/python/package/src/reverbobject/: __init__.py
src/python/package/src/rrl/: __init__.py
src/python/package/src/signalflows/: __init__.py
src/python/panning/: CMakeLists.txt
src/python/panningdsp/: CMakeLists.txt  panningdsp.cpp
src/python/panningdsp/test/: test_panning_gain_matrix.py  test_panning_matrix_parameter.py
src/python/pml/: CMakeLists.txt  pml.cpp
src/python/pml/test/: test_biquad_coefficient_parameter.py  test_gain_matrix.py  test_listener_position.py
src/python/rbbl/: CMakeLists.txt
src/python/rbbl/test/: test_crossfading_convolver_uniform.py  test_interpolating_convolver_uniform.py  test_interpolating_convolver_uniform_brir.py  test_lagrange_interpolator.py  test_position_3d.py  test_quaternion.py
src/python/rcl/: CMakeLists.txt  rcl.cpp
src/python/rcl/test/: test_fir_filter_matrix.py  test_gain_matrix.py  test_interpolating_fir_filter_matrix.py  test_parameter_input_terminator.py  test_parameter_output_terminator.py  test_position_decoder.py  test_time_frequency_transform.py
src/python/reverbobject/: CMakeLists.txt  reverbobject.cpp
src/python/rrl/: CMakeLists.txt
src/python/rrl/test/: test_audio_signal_flow.py  test_flexible_buffer_wrapper.py
src/python/signalflows/: CMakeLists.txt  signalflows.cpp
src/python/visr/: CMakeLists.txt
